# podman-gitops-stack

./: .ansible-lint  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamlfmt  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASE_CHECKLIST.md  cliff.toml  project_todo.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ci/: dockerfile
.github/workflows/: ci.yml
bootstrap/ansible/: ansible.cfg  site.yml
bootstrap/ansible/collections/: requirements.yml
bootstrap/ansible/group_vars/stack/: main.example.yml  main.yml  vault.example.yml
bootstrap/ansible/inventory/: hosts.example.yml
bootstrap/ansible/roles/base/defaults/: main.yml
bootstrap/ansible/roles/base/handlers/: main.yml
bootstrap/ansible/roles/base/tasks/: main.yml
bootstrap/ansible/roles/nas/defaults/: main.yml
bootstrap/ansible/roles/nas/tasks/: main.yml
bootstrap/ansible/roles/users/defaults/: main.yml
bootstrap/ansible/roles/users/tasks/: main.yml
bootstrap/ansible/scripts/vault-pass/: vault_pass.env.example  vault_pass.file.example  vault_pass.op.example  vault_pass.sh
ci/: vault-password.txt
orchestration/stackctl/: cli.py
